# object_recognition_household

./: CMakeLists.txt  README  db_plugin.xml  package.xml  setup.py
doc/source/: conf.py  index.rst
python/object_recognition_household/: db.py
src/db/: CMakeLists.txt  db_sql_household.cpp  wrap_object_db.cpp
test/: CMakeLists.txt
